--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*      1.      */
 html, body {
   height: 100%;
   margin: 0;
@@ -40,8 +41,10 @@ body {
   text-align: center;
   padding-top: 50px;
 }
+/*      1.      */
 
 /* Login button */
+/*      2.      */
 .login-button-container {
   margin: 20px 0;
 }
@@ -55,8 +58,10 @@ body {
   border-radius: 8px;
   transition: background-color 0.3s;
 }
+/*      2.      */
 
 /* Upload box */
+/*      8.      */
 .upload-box {
   background: #a7bde8;
   border: 2px dashed rgba(255, 255, 255, 0.2);
@@ -65,6 +70,8 @@ body {
   max-width: 400px;
   margin: 20px auto;
 }
+
+
 
 .upload-box.dragover {
   border-color: #7dd3fc;
@@ -75,3 +82,4 @@ input[type=file] {
   display: block;
   margin: 20px auto;
 }
+/*      8.      */
