--- a/style.css
+++ b/style.css
@@ -45,11 +45,27 @@ body {
 
 /* Login button */
 /*      2.      */
+body.center-login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+
 .login-button-container {
   margin: 20px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 10px;
+}
+
+.sec-pg-login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 5vh;
   gap: 10px;
 }
 
@@ -62,6 +78,24 @@ body {
   border-radius: 8px;
   transition: background-color 0.3s;
 }
+
+.wrapper {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 45vh;
+  width: 420px;
+  background-color: bisque;
+  color:black;
+  border-radius: 10px;
+  padding: 30px 40px
+}
+
+.wrapper h1 {
+  font-size: 36px;
+  text-align: center;
+}
+
 
 /* Sign Up button */
 /*      2.      */
