--- a/Dash.css
+++ b/Dash.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 body {
     --sb-width: 5rem;
@@ -13,8 +8,9 @@ body {
     background-color: white;
 }
 
-body.sb-decor {
-    --sb-width: 12.5rem;
+body.sb-decor main {
+    /*--sb-width: 12.5rem;*/
+    margin-left: 12.5rem;
 }
 
 h1 {
@@ -23,6 +19,7 @@ h1 {
 }
 
 p {
+    align-items: center;
     margin-bottom: 1.5rem;
 }
 
@@ -34,7 +31,7 @@ aside {
     */
     inset:0 auto 0 0;
     padding: 1rem; 
-    width: var(--sb-width);
+    width: 5rem;
     /*width: 80px;*/
     background-image: linear-gradient(rgb(55, 195, 216), blue, green, orange);
     transition: width 0.5s ease-in-out;
@@ -99,111 +96,15 @@ nav a span {
 }
 
 main {
+    justify-content: center;
+    align-items: center;
     margin-left: 5rem;
     padding: 1rem 2rem;
     transition: margin-left 0.5s ease-in-out;
 }
 
 @media (min-width: 768px) {
-    main{
+    main {
         margin-left: var(--sb-width);
     }
 }
-/*
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-
-    
-    font-family: system-ui, sans-serif;
-    font-size: 16px;
-    line-height: 1.7;
-    color: black;
-    background-color: white;
-}
-
-body.sb-expanded {
-    --sb-width: 12.5rem;
-}
-
-h1 {
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
-p {
-    margin-bottom: 1.5rem;
-}
-
-aside {
-    position: fixed;
-    /*top: 0;
-    left: 0;
-    bottom: 0;
-    
-    inset:0 auto 0 0;
-    padding: 1rem;
-    width: var(--sb-width);
-    background-image: linear-gradient(red, blue, green, orange);
-}
-
-/*
-nav {
-    height: 100%;
-    border: 1px solid;
-}
-
-nav ul {
-    list-style: none;
-    height: 100%;
-    display: flex;
-    flex-flow: column;
-    gap: 0.25rem; 
-}
-
-nav li:last-child {
-    margin-top: auto;
-}
-
-nav a {
-    display: flex;
-    align-items: center;
-    gap: 0.625rem;
-    padding: 0.625rem 0.875rem;
-    font-size: 1.25rem;
-    line-height: 1;
-    color: white;
-    text-decoration: none;
-    border-radius: 0.375rem;
-    transition: 
-    background-color 0.5s ease-in-out,
-    color 0.5s ease-in-out;
-}
-
-nav a.active,
-nav a:hover,
-nav a:focus-visible {
-    outline: none;
-    color: purple;
-    background-color: white;
-}
-
-nav a span {
-    font-size: 0.875rem;
-    opacity: 0;
-    visibility: hidden;
-}
-
-.sb-expanded nav a span {
-    opacity: 1;
-    visibility: visible;
-}
-
-.sb-expanded aside .bx-chevrons-right {
-    rotate: 180deg;
-}
-*/
